Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>of_Escalated_Cases__c</fullName>
        <description>NUMBER OF ESCALATED CASES</description>
        <label># of Escalated Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Reps_Trained__c</fullName>
        <label>% of Reps Trained</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>t1__c</fullName>
        <label>t1</label>
        <summarizedField>Opportunity.Opp_Line_Item_Count_del__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.PHONE1</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CT_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>GeoStatus__pc</columns>
        <columns>Geo_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geo_Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>CT Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Non_Partner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notEqual</operation>
            <value>Partner</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>Non Partner Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NorthwestAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.SALES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Northwest</value>
        </filters>
        <label>Northwest Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PartnerAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partner</value>
        </filters>
        <label>Partner Accounts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Complex</fullName>
        <active>true</active>
        <label>Complex</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporation</fullName>
        <active>true</active>
        <label>Corporation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Datacom</fullName>
        <active>true</active>
        <label>Data.com</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <label>Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simple</fullName>
        <active>true</active>
        <label>Simple</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Customer_Conversion</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Type , &quot;Customer&quot;)  &amp;&amp;  ISPICKVAL( Industry , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Industry</errorDisplayField>
        <errorMessage>Industry is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>